# TopoManagers

./: CMakeLists.txt  README.md
cmake_helper/: FindOccWrapper.cmake  FindOpenCasCade.cmake
include/: CompoundSolidManager.h  ISolidManager.h  PrimitiveSolidManager.h
src/: CMakeLists.txt  CompoundSolidManager.cpp  ISolidManager.cpp  PrimitiveSolidManager.cpp
test/: CMakeLists.txt  CompoundSolidManagerTester.cpp  ISolidManagerTester.cpp  PrimitiveSolidManagerTester.cpp  SimpleTest.cpp
